package com.plcoding.cleanarchitecturenoteapp.feature_note.domain.util

object Constants {

    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"

}